Platform 2.25

* HttpServer

  We added 100.64.0.0/10 to the default set of networks trusted for following
  the X-Forwarded-For: header.

* Docker

  We removed support for Sealights under Docker.

Platform 2.24

* Library Upgrades

  - Base Docker image to proofpoint/platform-zulu-11:1.5
    based on 11.0.6 (was proofpoint/platform-zulu-11:1.4)

* Maven plugin upgrades

  - docker-maven-plugin to 0.33.0 (was 0.30.0)

Platform 2.23

* Launcher

  We moved the StartLimitIntervalSecs setting from [Unit] to [Service] in
  order to fix an error on newer versions of systemd.

Platform 2.22

* HttpServer

  We fixed a regression in 2.19 when a Java keystore had multiple cert/key
  pairs.

* Library Upgrades
  - Guava to 28.2-jre (was 28.1-jre)
  - hibernate-validator to 6.0.18.Final (was 6.0.16.Final)

* Maven plugin upgrades

 - duplicate-finder-maven-plugin to 1.4.0 (was 1.3.0)

Platform 2.20

* HttpClient

  We fixed a bug
  bindDiscoveredHttpClient(String, Class<? extends Annotation>) that was
  introduced in 2.19.

Platform 2.19

* HttpClient

  We have deprecated @com.proofpoint.discovery.client.ServiceType in favor of
  @com.proofpoint.http.client.ServiceType.

  We created convenience HttpClientBinder methods
  bindBalancingHttpClient(String, String, String...) and
  bindKubernetesServiceHttpClient(String, String)

* Deprecation removals

  We removed the following deprecated APIs:

  - AnnotatedBindingBuilder constructor
  - PrefixBindingBuilder constructor
  - ConfigBindingBuilder constructor
  - ConfigurationProvider
  - HttpClientModule
  - http.client.Request constructors
  - RuntimeIOException
  - JettyHttpClient.getIoPoolStats()
  - JettyIoPoolConfig
  - ClientInfoUtils.clientAddressFor()
  - HttpServer constructors
  - HttpServerProvider, TestingHttpServer, and TestingAdminHttpServer
    constructors without a ClientAddressExtractor parameter
  - RequestStats.record(String, int, long, long, Duration, Duration)